k8s/ingress/esthesis-ingress-platform-ui.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: esthesis-ingress-platform-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: platform.nassos1.dev.ath.esthesis.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: esthesis-platform-ui-service
              servicePort: 80
  tls:
    - hosts:
        - platform.nassos1.dev.ath.esthesis.cloud
      secretName: platform-nassos1-dev-ath-esthesis-cloud-crt
